<resources>
    <string name="app_name">Water Reminder</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="new_user_sign_up">New User? Sign up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="date">Date</string>
    <string name="purpose">Purpose</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="yo_forgot_tour_password">Yo! Forgot Tour Password?</string>
    <string name="no_worries_enter_your_email_and_we_will_send_a_rest">No worries! Enter your email and we will send a rest.</string>
    <string name="yo_forgot_your_password">Yo! Forgot Your Password</string>
    <string name="send_request">SEND REQUEST</string>
    <string name="for_your_healthy_life">^ For your healthy Life ^</string>
    <string name="no">NO</string>
    <string name="of_water">of water</string>
    <string name="of_water_required">Of water (Required)</string>
    <string name="enter_your_activity_time_period">Enter your Activity time period</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="stats">Stats</string>
    <string name="start_time">Start Time</string>
    <string name="wake_up_time">Wake up Time</string>
    <string name="sleep_time">Sleep Time</string>
    <string name="dive_in"><![CDATA[Dive in >>]]></string>
    <string name="hello1">Hello,</string>
    <string name="wat">Wat</string>
    <string name="undo">Undo</string>
    <string name="add">ADD</string>
    <string name="today_left_for_the_goal">Today left for the Goal</string>
    <string name="goal_for_today">Goal for today</string>
    <string name="_1_cup_is_equal_to_1_2_liter_of_water">* 1 cup is equal to 1/2 liter of water</string>
    <string name="water_reminder">Water Reminder</string>
    <string name="profile">Profile</string>
    <string name="dob">DOB</string>
    <string name="sign_out">Sign out</string>
    <string name="reminders">Reminders</string>
    <string name="no_water_reminder">No reminders set, see to your home page to get in how many times water should be consumed</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="set_time">Set Time</string>
    <string name="set_repeat_on">Set Repeat on</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="_9_00">9:00</string>
    <string name="_9_00_am">9:00 AM</string>
    <string name="liters_of_water_required">Liters of water (Required)</string>
    <string name="with_3_v15go"><![CDATA[With <3 V15Go]]></string>
</resources>