<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".login_page">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="200dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/allerta_stencil"
            android:text="@string/login"
            android:layout_gravity="center"

            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:textColor="#268FD0" />

        <EditText
            android:id="@+id/username_field"
            android:layout_width="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"

            android:paddingLeft="50dp"

            android:hint="@string/username"
            android:inputType="none"
            android:background="@drawable/user_rect"


            android:autofillHints=""
            android:paddingStart="50dp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/pass_rec"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="50dp"

            android:autofillHints=""
            android:paddingStart="50dp"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/forget_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/rect1"
            android:fontFamily="@font/allerta_stencil"
            android:text="@string/login"
            android:gravity="center"
            android:textSize="16sp"
            app:backgroundTint="#004360" />

        <TextView
            android:id="@+id/new_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text= "@string/new_user_sign_up"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"/>



    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>



