<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_up_bg"
    tools:context=".forgot_pass_page">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.475">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="14dp"
            android:fontFamily="@font/allerta_stencil"
            android:text="@string/yo_forgot_your_password"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:textColor="#268FD0"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/allerta_stencil"
            android:text="@string/no_worries_enter_your_email_and_we_will_send_a_rest"

            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:textColor="#268FD0"
            android:textSize="13sp" />


        <EditText
            android:id="@+id/username_forgot_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@drawable/user_rect"
            android:hint="@string/username"
            android:inputType="none"

            android:paddingStart="55dp"
            android:paddingLeft="55dp"
            tools:ignore="LabelFor,RtlSymmetry" />


        <Button
            android:id="@+id/rest_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/send_request"
            android:textSize="18sp" />




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>